--- a/protocol/identity/Cargo.toml
+++ b/protocol/identity/Cargo.toml
@@ -10,10 +10,12 @@ edition = "2018"
 async-std = "1.0"
 futures = "0.3.5"
 futures-util = "0.3.5"
+prost = "0.6.1"
 utils = {path = "../../utils"}
 secio = { package="yaanhyy-secio", rev = '28ed08d58f2cc303b55cca99e2e5df9a6d734c4e', git = "https://github.com/yaanhyy/yaanhyy-secio.git"}
 yamux = { package="yaanhyy-yamux", rev = '4f428a79e5c0a23c7212694a3a781ccc853735c9', git = "https://github.com/yaanhyy/yaanhyy-yamux.git"}
 multistream-select = {package="yaanhyy-multistream-select", path="../../misc/multistream-select"}
+unsigned-varint = "0.3"
 
 [build-dependencies]
 prost-build = "0.6"
