--- a/protocol/identity/Cargo.toml
+++ b/protocol/identity/Cargo.toml
@@ -16,6 +16,8 @@ secio = { package="yaanhyy-secio", rev = '28ed08d58f2cc303b55cca99e2e5df9a6d734c
 yamux = { package="yaanhyy-yamux", rev = '4f428a79e5c0a23c7212694a3a781ccc853735c9', git = "https://github.com/yaanhyy/yaanhyy-yamux.git"}
 multistream-select = {package="yaanhyy-multistream-select", path="../../misc/multistream-select"}
 unsigned-varint = "0.3"
+parity-multiaddr = "0.9.0"
+bincode = "1"
 
 [build-dependencies]
 prost-build = "0.6"
