--- a/protocol/gossipsub/Cargo.toml
+++ b/protocol/gossipsub/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "utils"
+name = "gossipsub"
 version = "0.1.0"
 authors = ["hyy"]
 edition = "2018"
@@ -7,8 +7,3 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "0.4"
-log = "0.4"
-env_logger = "0.6"
-unsigned-varint = "0.3"
-futures = "0.3.5"
