--- a/protocol/noise/Cargo.toml
+++ b/protocol/noise/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "yaanhyy-identity"
+name = "noise"
 version = "0.1.0"
 authors = ["hyy"]
 edition = "2018"
@@ -12,10 +12,5 @@ futures = "0.3.5"
 futures-util = "0.3.5"
 prost = "0.6.1"
 utils = {path = "../../utils"}
-secio = { package="yaanhyy-secio", rev = '16421be27a37337526110c7f739b1c91d8414988', git = "https://github.com/yaanhyy/yaanhyy-secio.git"}
-yamux = { package="yaanhyy-yamux", rev = '83ef900e6948596ba923cab3b222306b0dc0cb13', git = "https://github.com/yaanhyy/yaanhyy-yamux.git"}
 multistream-select = {package="yaanhyy-multistream-select", path="../../misc/multistream-select"}
 parity-multiaddr = "0.9.0"
-
-[build-dependencies]
-prost-build = "0.6"
