--- a/protocol/mdns/Cargo.toml
+++ b/protocol/mdns/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-std = "1.0"
+futures = "0.3.5"
 net2 = "0.2"
+dns-parser = "0.8"
