--- a/protocol/mdns/Cargo.toml
+++ b/protocol/mdns/Cargo.toml
@@ -11,3 +11,6 @@ async-std = "1.0"
 futures = "0.3.5"
 net2 = "0.2"
 dns-parser = "0.8"
+lazy_static = "1.2"
+secio = { package="yaanhyy-secio", rev = '16421be27a37337526110c7f739b1c91d8414988', git = "https://github.com/yaanhyy/yaanhyy-secio.git"}
+parity-multiaddr = "0.9.0"
