--- a/protocol/noise/Cargo.toml
+++ b/protocol/noise/Cargo.toml
@@ -16,7 +16,15 @@ multistream-select = {package="yaanhyy-multistream-select", path="../../misc/mul
 parity-multiaddr = "0.9.0"
 secio = { package="yaanhyy-secio", rev = '16421be27a37337526110c7f739b1c91d8414988', git = "https://github.com/yaanhyy/yaanhyy-secio.git"}
 x25519-dalek = "0.6.0"
+curve25519-dalek = "2.0.0"
 snow = { version = "0.6.1", features = ["ring-resolver"], default-features = false }
+zeroize = "1"
+sha2 = "0.8.0"
+rand = "0.7.2"
+static_assertions = "1"
+log = "0.4"
+lazy_static = "1.2"
 
 [dev-dependencies]
 quickcheck = "0.9.0"
+sodiumoxide = "^0.2.5"
