--- a/misc/discv5/Cargo.toml
+++ b/misc/discv5/Cargo.toml
@@ -29,6 +29,10 @@ multiaddr = { package = "parity-multiaddr", version = "0.9.0"}
 hex = "*"
 rlp = "0.4.3"
 enr = { version = "*", features = ["serde", "ed25519", "rust-secp256k1"] }
+digest = "0.8.1"
+openssl = "0.10.29"
+zeroize = { version = "1.1.0", features = ["zeroize_derive"] }
+hkdf = "0.8.0"
 
 [dev-dependencies]
 quickcheck = "0.9.0"
