--- a/misc/enr/Cargo.toml
+++ b/misc/enr/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-enr = { version = "*", features = ["serde", "ed25519", "rust-secp256k1"] }
+enr = { version = "0.1.0", features = ["libsecp256k1", "ed25519"] }
 base64 = "0.12.0"
 bs58 = "0.3.0"
 hex = "0.4.2"
