--- a/protocol/gossipsub/Cargo.toml
+++ b/protocol/gossipsub/Cargo.toml
@@ -23,3 +23,7 @@ base64 = "0.11.0"
 unsigned-varint = { version = "0.3.0", features = ["futures-codec"] }
 bytes = "0.5.4"
 rand = "0.7.3"
+target_info = "0.1.0"
+serde = "1.0.110"
+serde_derive = "1.0.110"
+hex = "*"
