--- a/misc/discv5/Cargo.toml
+++ b/misc/discv5/Cargo.toml
@@ -28,7 +28,7 @@ multihash = "0.11.0"
 multiaddr = { package = "parity-multiaddr", version = "0.9.0"}
 hex = "*"
 rlp = "0.4.3"
-enr = { version = "*", features = ["serde", "ed25519", "rust-secp256k1"] }
+enr = { version = "0.1.0", features = ["libsecp256k1", "ed25519"] }
 digest = "0.8.1"
 openssl = "0.10.29"
 zeroize = { version = "1.1.0", features = ["zeroize_derive"] }
