--- a/protocol/noise/Cargo.toml
+++ b/protocol/noise/Cargo.toml
@@ -17,7 +17,7 @@ parity-multiaddr = "0.9.0"
 secio = { package="yaanhyy-secio",  git = "https://github.com/yaanhyy/yaanhyy-secio.git"}
 x25519-dalek = "0.6.0"
 curve25519-dalek = "2.0.0"
-#snow = { version = "0.6.1", features = ["ring-resolver"], default-features = false }
+snow = { version = "0.7.0", features = ["ring-resolver"], default-features = false }
 zeroize = "1"
 sha2 = "0.8.0"
 rand = "0.7.3"
