--- a/protocol/noise/Cargo.toml
+++ b/protocol/noise/Cargo.toml
@@ -12,7 +12,7 @@ futures = "0.3.5"
 futures-util = "0.3.5"
 prost = "0.6.1"
 utils = {path = "../../utils"}
-multistream-select = {package="yaanhyy-multistream-select", path="../../misc/multistream-select"}
+#multistream-select = {package="yaanhyy-multistream-select", path="../../misc/multistream-select"}
 parity-multiaddr = "0.9.0"
 secio = { package="yaanhyy-secio",  git = "https://github.com/yaanhyy/yaanhyy-secio.git"}
 x25519-dalek = "0.6.0"
