--- a/muxers/mplex/Cargo.toml
+++ b/muxers/mplex/Cargo.toml
@@ -7,3 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-std = "1.0"
+futures = "0.3.5"
+futures-util = "0.3.5"
+utils = {path = "../../utils"}
+noise = { package="yaanhyy-noise", path = "../../protocol/noise" }
+secio = { package="yaanhyy-secio",  git = "https://github.com/yaanhyy/yaanhyy-secio.git"}
