--- a/protocol/identity/Cargo.toml
+++ b/protocol/identity/Cargo.toml
@@ -13,7 +13,7 @@ futures-util = "0.3.5"
 prost = "0.6.1"
 utils = {path = "../../utils"}
 secio = { package="yaanhyy-secio",  git = "https://github.com/yaanhyy/yaanhyy-secio.git"}
-yamux = { package="yaanhyy-yamux", rev = 'dad5e6e2fdcec9b45a57d86e2f2cf0c0d9e4cf47', git = "https://github.com/yaanhyy/yaanhyy-yamux.git"}
+yamux = { package="yaanhyy-yamux",  git = "https://github.com/yaanhyy/yaanhyy-yamux.git"}
 multistream-select = {package="yaanhyy-multistream-select", path="../../misc/multistream-select"}
 parity-multiaddr = "0.9.0"
 
